Added preprocesed data notebook addressing findings in EDA

--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1a7fb4c6",
+   "id": "035f3b2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1f320666",
+   "id": "a23091a6",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a720b058",
+   "id": "720ab2cc",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "02b6e318",
+   "id": "829d82db",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "99e29872",
+   "id": "ea1cc81e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c8d531c1",
+   "id": "99b5cd39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f0fafc02",
+   "id": "facdd360",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2b333dc0",
+   "id": "60217cae",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "01f299f6",
+   "id": "8ac4ef88",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ce164426",
+   "id": "b75890ed",
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "00c323a2",
+   "id": "008ee9fe",
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "1bc502ea",
+   "id": "ae2c79e2",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "1937c7c9",
+   "id": "1cf86209",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "f39c72b3",
+   "id": "91c57663",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "cc86f590",
+   "id": "6d475fb3",
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "28eec0a0",
+   "id": "15049406",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "3cbc4c7d",
+   "id": "a3a81a56",
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "17f0aa37",
+   "id": "cdef19fb",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "717ba515",
+   "id": "3f8a8141",
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "3ed2034c",
+   "id": "8936e0d9",
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "92c445d0",
+   "id": "ddfcbf06",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "af46326d",
+   "id": "3490de7e",
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "eaa3e771",
+   "id": "425daaf7",
    "metadata": {},
    "outputs": [
     {
@@ -927,8 +927,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "2b036dcb",
+   "execution_count": 49,
+   "id": "97bd6a7c",
    "metadata": {},
    "outputs": [
     {
@@ -971,13 +971,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cc5304fc",
+   "execution_count": 50,
+   "id": "962bc305",
    "metadata": {},
    "outputs": [],
    "source": [
-    "g"
+    "df_merged.to_csv(\"C:/My_projects/churn-prediction-mlops-pipeline/data/processed-data/eda_merged_data.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f0817e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
