--- a/notebooks/03-feature_engineering.ipynb
+++ b/notebooks/03-feature_engineering.ipynb
@@ -2,13 +2,248 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6b1e2fa3",
+   "execution_count": 2,
+   "id": "8516022c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('C:/My_Projects/churn-prediction-mlops-pipeline/data/processed-data//preprocessed_data.csv')"
+    "import pandas as pd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cae1f457",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('C:/My_Projects/churn-prediction-mlops-pipeline/data/processed-data/preprocessed_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "98106e34",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customerID</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>SeniorCitizen</th>\n",
+       "      <th>Partner</th>\n",
+       "      <th>Dependents</th>\n",
+       "      <th>tenure</th>\n",
+       "      <th>PhoneService</th>\n",
+       "      <th>MultipleLines</th>\n",
+       "      <th>InternetService</th>\n",
+       "      <th>OnlineSecurity</th>\n",
+       "      <th>...</th>\n",
+       "      <th>MonthlyCharges</th>\n",
+       "      <th>TotalCharges</th>\n",
+       "      <th>Churn</th>\n",
+       "      <th>Churn_Label</th>\n",
+       "      <th>total_complaints</th>\n",
+       "      <th>resolved_complaints</th>\n",
+       "      <th>unresolved_complaints</th>\n",
+       "      <th>call_drop_rate</th>\n",
+       "      <th>data_usage_gb</th>\n",
+       "      <th>throughput_Mbps</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7590-VHVEG</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No phone service</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>No</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.85</td>\n",
+       "      <td>29.85</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.062500</td>\n",
+       "      <td>0.801959</td>\n",
+       "      <td>27.535000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5575-GNVDE</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>...</td>\n",
+       "      <td>56.95</td>\n",
+       "      <td>1889.50</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.021296</td>\n",
+       "      <td>0.645391</td>\n",
+       "      <td>26.696667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3668-QPYBK</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>...</td>\n",
+       "      <td>53.85</td>\n",
+       "      <td>108.15</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.016369</td>\n",
+       "      <td>0.797935</td>\n",
+       "      <td>26.060000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7795-CFOCW</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>45</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No phone service</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>...</td>\n",
+       "      <td>42.30</td>\n",
+       "      <td>1840.75</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0.028629</td>\n",
+       "      <td>0.667240</td>\n",
+       "      <td>19.790000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9237-HQITU</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Fiber optic</td>\n",
+       "      <td>No</td>\n",
+       "      <td>...</td>\n",
+       "      <td>70.70</td>\n",
+       "      <td>151.65</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>6</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.027083</td>\n",
+       "      <td>0.762973</td>\n",
+       "      <td>28.206667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   customerID  gender  SeniorCitizen Partner Dependents  tenure PhoneService  \\\n",
+       "0  7590-VHVEG  Female              0     Yes         No       1           No   \n",
+       "1  5575-GNVDE    Male              0      No         No      34          Yes   \n",
+       "2  3668-QPYBK    Male              0      No         No       2          Yes   \n",
+       "3  7795-CFOCW    Male              0      No         No      45           No   \n",
+       "4  9237-HQITU  Female              0      No         No       2          Yes   \n",
+       "\n",
+       "      MultipleLines InternetService OnlineSecurity  ... MonthlyCharges  \\\n",
+       "0  No phone service             DSL             No  ...          29.85   \n",
+       "1                No             DSL            Yes  ...          56.95   \n",
+       "2                No             DSL            Yes  ...          53.85   \n",
+       "3  No phone service             DSL            Yes  ...          42.30   \n",
+       "4                No     Fiber optic             No  ...          70.70   \n",
+       "\n",
+       "  TotalCharges Churn Churn_Label total_complaints resolved_complaints  \\\n",
+       "0        29.85    No           0               13                   5   \n",
+       "1      1889.50    No           0                8                   2   \n",
+       "2       108.15   Yes           1                8                   2   \n",
+       "3      1840.75    No           0               15                   4   \n",
+       "4       151.65   Yes           1               19                   6   \n",
+       "\n",
+       "  unresolved_complaints call_drop_rate  data_usage_gb  throughput_Mbps  \n",
+       "0                     8       0.062500       0.801959        27.535000  \n",
+       "1                     6       0.021296       0.645391        26.696667  \n",
+       "2                     6       0.016369       0.797935        26.060000  \n",
+       "3                    11       0.028629       0.667240        19.790000  \n",
+       "4                    13       0.027083       0.762973        28.206667  \n",
+       "\n",
+       "[5 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f606e7f3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
